# spacebattle-open

./: Rules.md
engine/: Engine.cpp  Engine.h  TypesAndConsts.h
invalidbot/: InvalidBot.h
profiler_linux/: Bot.h  CMakeLists.txt  Profiler.cpp
profiler_win32/: CMakeLists.txt  Profiler.cpp  profiler_win32.cbp
